--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,15 +88,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dest_path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "for x in images_path:\n",
     "    img = cv2.imread(x, cv2.IMREAD_GRAYSCALE)\n",
-    "#     img = cv2.resize(img, (1000, 1300))\n",
+    "    img = cv2.resize(img, (1000, 1300))\n",
+    "\n",
     "    cropped = getFace(img) \n",
-    "    cropped = cv2.resize(cropped, (480, 500))\n",
+    "#     cropped = cv2.resize(cropped, (480, 500))\n",
+    "    \n",
     "    img = Image.fromarray(cropped)\n",
     "    img.save('images/1.jpg')\n",
     "    break"
@@ -132,6 +143,27 @@
    ],
    "source": [
     "plt.imshow(cropped, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'matplotlib.pyplot' has no attribute 'blabla'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-10-6900e6c09d2a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mblabla\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'matplotlib.pyplot' has no attribute 'blabla'"
+     ]
+    }
+   ],
+   "source": [
+    "plt.blabla"
    ]
   }
  ],
